--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ authors:
   zhutianqi:
     name: Tom Noob
     display_name: Tom Noob
-    avatar: 'assets/images/avatar-sal.png'
+    avatar: 'assets/images/zhutianqi.png'
     email: zhutianqi0124@gmail.com
     web: https://zhutianqi.github.io/blog/
     description: "?"
